# 3drender

./: CMakeLists.txt
wwdisplayobjects/: Object.cpp  Object.h  Surface.cpp  Surface.h
wwgraphicscore/: Drawer.cpp  Drawer.h  FontDrawer.cpp  FontDrawer.h  Screen.cpp  Screen.h  main.cpp
wwmathcore/: MMatrix.cpp  MMatrix.h  MVector.cpp  MVector.h  Polygon2D.cpp  Polygon2D.h  World.cpp  World.h
